--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.zip filter=lfs diff=lfs merge=lfs -text
-*.jpg filter=lfs diff=lfs merge=lfs -text
+data/*.jpg filter=lfs diff=lfs merge=lfs -text
+archive/*.zip filter=lfs diff=lfs merge=lfs -text
